@@ -21,6 +21,30 @@
 #define MIOS32_USB_MIDI_NUM_PORTS 1
 
 
+// AIN configuration:
+
+// bit mask to enable channels
+//
+// Pin mapping on MBHP_CORE_STM32 module:
+//   15       14      13     12     11     10      9      8   
+// J16.SO  J16.SI  J16.SC J16.RC J5C.A11 J5C.A10 J5C.A9 J5C.A8
+//   7        6       5      4      3      2      1       0
+// J5B.A7  J5B.A6  J5B.A5 J5B.A4 J5A.A3 J5A.A2 J5A.A1  J5A.A0
+//
+// Examples:
+//   mask 0x000f will enable all J5A channels
+//   mask 0x00f0 will enable all J5B channels
+//   mask 0x0f00 will enable all J5C channels
+//   mask 0x0fff will enable all J5A/B/C channels
+// (all channels are disabled by default)
+#define MIOS32_AIN_CHANNEL_MASK 0x00ff
+
+// define the deadband (min. difference to report a change to the application hook)
+// typically set to (2^(12-desired_resolution)-1)
+// e.g. for a resolution of 7 bit, it's set to (2^(12-7)-1) = (2^5 - 1) = 31
+#define MIOS32_AIN_DEADBAND 31
+
+
 #define DEBUG_MSG MIOS32_MIDI_SendDebugMessage
 
 #endif /* _MIOS32_CONFIG_H */
