@@ -50,6 +50,7 @@ static u8 extraPage;
 static u8 selectedDin;
 static u8 selectedDout;
 static u8 selectedMatrix;
+static u8 selectedAin;
 static u8 selectedRouterNode;
 static u8 selectedIpPar;
 static u8 selectedOscPort;
@@ -437,6 +438,40 @@ static void matrixPortSet(u32 ix, u16 value)
   m->enabled_ports |= ((value&1) << ix);
 }
 
+static u16  ainGet(u32 ix)               { return selectedAin; }
+static void ainSet(u32 ix, u16 value)    { selectedAin = value; }
+
+static u16  ainEvntGet(u32 ix)
+{
+  midio_patch_ain_entry_t *ain_cfg = (midio_patch_ain_entry_t *)&midio_patch_ain[selectedAin];
+  switch( ix ) {
+  case 0: return ain_cfg->evnt0;
+  case 1: return ain_cfg->evnt1;
+  }
+  return 0; // error...
+}
+static void ainEvntSet(u32 ix, u16 value)
+{
+  midio_patch_ain_entry_t *ain_cfg = (midio_patch_ain_entry_t *)&midio_patch_ain[selectedAin];
+  switch( ix ) {
+  case 0: ain_cfg->evnt0 = value; break;
+  case 1: ain_cfg->evnt1 = value; break;
+  }
+}
+
+static u16  ainPortGet(u32 ix)
+{
+  midio_patch_ain_entry_t *ain_cfg = (midio_patch_ain_entry_t *)&midio_patch_ain[selectedAin];
+  return (ain_cfg->enabled_ports >> ix) & 1;
+}
+static void ainPortSet(u32 ix, u16 value)
+{
+  midio_patch_ain_entry_t *ain_cfg = (midio_patch_ain_entry_t *)&midio_patch_ain[selectedAin];
+  ain_cfg->enabled_ports &= ~(1 << ix);
+  ain_cfg->enabled_ports |= ((value&1) << ix);
+}
+
+
 static u16  routerNodeGet(u32 ix)             { return selectedRouterNode; }
 static void routerNodeSet(u32 ix, u16 value)  { selectedRouterNode = value; }
 
@@ -572,6 +607,29 @@ const scs_menu_item_t pageM8x8[] = {
   SCS_ITEM("OSC4 ",15, 1,           matrixPortGet,   matrixPortSet,   selectNOP, stringOnOff, NULL),
 };
 
+const scs_menu_item_t pageAIN[] = {
+  SCS_ITEM("Pin# ", 0, MIDIO_PATCH_NUM_AIN-1, ainGet,   ainSet,     selectNOP, stringDec,  NULL),
+  SCS_ITEM("Evn0 ", 0, 0x7f,        ainEvntGet,     ainEvntSet,     selectNOP, stringHex2O80, NULL),
+  SCS_ITEM("Evn1 ", 1, 0x7f,        ainEvntGet,     ainEvntSet,     selectNOP, stringHex2, NULL),
+  SCS_ITEM("USB1 ", 0, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+#if MIOS32_USB_MIDI_NUM_PORTS >= 2
+  SCS_ITEM("USB2 ", 1, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+#endif
+#if MIOS32_USB_MIDI_NUM_PORTS >= 3
+  SCS_ITEM("USB3 ", 2, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+#endif
+#if MIOS32_USB_MIDI_NUM_PORTS >= 4
+  SCS_ITEM("USB4 ", 3, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+#endif
+  SCS_ITEM(" IN1 ", 4, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+  SCS_ITEM(" IN2 ", 5, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+  SCS_ITEM(" IN3 ", 6, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+  SCS_ITEM("OSC1 ",12, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+  SCS_ITEM("OSC2 ",13, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+  SCS_ITEM("OSC3 ",14, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+  SCS_ITEM("OSC4 ",15, 1,           ainPortGet,     ainPortSet,     selectNOP, stringOnOff, NULL),
+};
+
 const scs_menu_item_t pageROUT[] = {
   SCS_ITEM("Node", 0, MIDIO_PATCH_NUM_ROUTER-1, routerNodeGet, routerNodeSet,selectNOP, stringDecP1, NULL),
   SCS_ITEM("SrcP", 0, MIDIO_PORT_NUM_IN_PORTS-1, routerSrcPortGet, routerSrcPortSet,selectNOP, stringInPort, NULL),
@@ -619,6 +677,7 @@ const scs_menu_page_t rootMode0[] = {
   SCS_PAGE("DIN  ", pageDIN),
   SCS_PAGE("DOUT ", pageDOUT),
   SCS_PAGE("M8x8 ", pageM8x8),
+  SCS_PAGE("AIN  ", pageAIN),
   SCS_PAGE("Rout ", pageROUT),
   SCS_PAGE("OSC  ", pageOSC),
   SCS_PAGE("Netw ", pageNetw),
